ScrollAnchor: Skip inline elements with overflow-anchor: none.

An inline element can't be the anchor node, but the anchor selection
algorithm was descending into it indiscriminately instead of checking
the exclusion API first.

Bug: 918756
Change-Id: Ie9b5e5fdea7f23de1af0b5215956151e9af15d3a
Reviewed-on: https://chromium-review.googlesource.com/c/1400941
Reviewed-by: David Bokan <bokan@chromium.org>
Commit-Queue: Steve Kobes <skobes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620761}
Former-commit-id: 9aa48df8be25fbe012dd1729b799b88fb25bacc6